# raw2film

./: .gitignore  .pre-commit-config.yaml  README.md  desktop.ini  exif_test.py  lens_db.py  lut_generator.py  new_hald.py  processing.py  processing_cuda.py  pyproject.toml  raw2film.spec  requirements.txt  test_gui.py  zensical.toml
.github/workflows/: python-app.yml
docs/: 1_installation.md  2_usage.md  3_processing_pipeline.md  4_contributing.md  index.md  ref-gen.py
docs/reference/: color_processing.md  cpu_processor.md  data.md  effects.md  gpu_processor.md  gui.md  image_bar.md  index.md  raw_conversion.md  utils.md
src/: gpu.py
src/raw2film/: __init__.py  __main__.py  color_processing.py  cpu_processor.py  data.py  effects.py  gpu.py  gpu_processor.py  gui.py  gui_objects.py  image_bar.py  processing.py  raw_conversion.py  utils.py
src/raw2film/shaders/: convolution.wgsl  copy_to_int.wgsl  grain.wgsl  highlight_burn.wgsl  histogram.wgsl  lut_1d.wgsl  lut_2d.wgsl  lut_3d.wgsl  lut_tetrahedral.wgsl  noise.wgsl  noise_bw.wgsl  scale_texture.wgsl
tests/: smoke_test.py
