[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "raw2film"
dynamic = ["version"]
authors = [
    { name = "Jan Lohse" },
]
description = "RAW image editor that emulates the look of various film stocks."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "ffmpeg-python>=0.2.0",
    "imageio>=2.37.2",
    "lensfunpy>=1.18.0",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pyexiftool>=0.5.6",
    "rawpy>=0.26.1",
    "scipy>=1.17.1",
    "spectral-film-lut @ git+https://github.com/JanLohse/spectral_film_lut",
]

[dependency-groups]
dev = [
    "pdoc>=16.0.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.5",
]

[project.urls]
Homepage = "https://github.com/JanLohse/raw2film"
Issues = "https://github.com/JanLohse/raw2film/issues"

[project.gui-scripts]
raw2film = "raw2film.__main__:run"

[tool.setuptools_scm]
write_to = "src/raw2film/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"


[tool.ruff.lint]
extend-select = ["I", "E"]
extend-fixable = ["I", "E"]
