[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "raw2film"
dynamic = ["version"]
authors = [
    { name = "Jan Lohse" },
]
description = "RAW image editor that emulates the look of various film stocks."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "imageio>=2.37.3",
    "lensfunpy>=1.18.0",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyexiftool>=0.5.6",
    "rawpy>=0.26.1",
    "scipy>=1.17.1",
    "spectral-film-lut @ git+https://github.com/JanLohse/spectral_film_lut@cuda",
]

[dependency-groups]
dev = [
    "mkdocstrings-python>=2.0.3",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "zensical>=0.0.39",
]

[project.urls]
Homepage = "https://github.com/JanLohse/raw2film"
Issues = "https://github.com/JanLohse/raw2film/issues"

[project.gui-scripts]
raw2film = "raw2film.__main__:run"

[tool.setuptools_scm]
write_to = "src/raw2film/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
