[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "raw2film"
dynamic = ["version"]
authors = [
    { name = "Jan Lohse" },
]
description = "RAW image editor that emulates the look of various film stocks."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "imageio>=2.37.3",
    "lensfunpy>=1.18.0",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyexiftool>=0.5.6",
    "rawpy>=0.26.1",
    "scipy>=1.17.1",
    "spectral-film-lut>=0.5.2",
    "wgpu>=0.31.0",
]

[dependency-groups]
dev = [
    "mkdocstrings-python>=2.0.3",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "zensical>=0.0.39",
]

[project.urls]
Repository = "https://github.com/JanLohse/raw2film"
Documentation = "https://janlohse.github.io/raw2film"
Issues = "https://github.com/JanLohse/raw2film/issues"

[project.gui-scripts]
raw2film = "raw2film.__main__:run"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/raw2film/_version.py"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
